test/mutation_analysis/s0942_di_string_match/hafis/ablation_o3_r50/mutants/23/result.txt
./test/mutation_analysis/s0942_di_string_match/hafis/ablation_o3_r50/mutants/23/Solution.java:24: error: unreachable statement
        for (int i = s.length() - 1; false; i--) {
                                                 ^
1 error
